<resources>
    <string name="app_name">E_commerce</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="adhar_number">Adhar Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="gst_number">GST Number</string>
    <string name="address">Address</string>
    <string name="office_number">City</string>
    <string name="enter_password">Enter Password</string>
    <string name="pan_card">PAN CARD</string>
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="E_Commerce">E_Commerce</string>
    <string name="LoginActivity">LoginActivity</string>
    <string name="Search_Activity">Search_Activity</string>
    <string name="Product_Activity">Product_Activity</string>
    <string name="Buy_Now">Buy_Now</string>
    <string name="Register_Activity">Register_Activity</string>
    <string name="Search_Activity1">Search_Activity1</string>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="ledger_account">Ledger Account</string>
    <string name="sajay">Sajay</string>
    <string name="export">Export</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>


</resources>
