<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_wc_black_24dp"
            android:title="@string/export" />
        <item
            android:id="@+id/nav_sajay"
            android:title="@string/sajay" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/ledger_account" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_message_black_24dp"
                android:title="@string/message" />
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/call" />
        </menu>
    </item>

</menu>
